hero section added

--- a/index.html
+++ b/index.html
@@ -10,10 +10,45 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="container">
 
+    <div class="hero-section">
 
+        <div class="hero-title">
+            <div>
+                <p class="hero-text">START YOUR DAY</p>
+                <p class="hero-text">At</p>
+                <p class="hero-text text-family">COFFEE HOUSE</p>
+            </div>
+            <p class="hero-title-additional-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quas?</p>
+            <button class="btn">Explore More</button>
+        </div>
 
+        <div class="hero-image">
+            <img class="img" src="images/hero-image.jpg" alt="">
+        </div>
+
+        <div class="hero-featured">
+            <div class="hero-featured-1">
+                <img class="hero-featured-img" src="images/hero-feature1.jpg" alt="">
+                <p class="hero-featured-text">Are the New Norm for iced coffee</p>
+            </div>
+            <div class="hero-featured-2">
+                <img class="hero-featured-img" src="images/hero-feature2.PNG" alt="">
+                <p class="hero-featured-text">Have a donut with the frappuccino</p>
+            </div>
+            <div class="hero-featured-3">
+                <img class="hero-featured-img" src="images/hero-feature3.PNG" alt="">
+                <p class="hero-featured-text">Enjoy our sugar free cookies</p>
+            </div>
+        </div>
+
+    </div>
+
+    <!-- <div class="feature-product">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia pariatur est ea ducimus
+            s.</p>
+    </div> -->
 
 
 
