feature product section added

--- a/index.html
+++ b/index.html
@@ -12,43 +12,75 @@
 
 <body class="container">
 
+
+    <!-- hero section start -->
     <div class="hero-section">
 
         <div class="hero-title">
             <div>
-                <p class="hero-text">START YOUR DAY</p>
+                <p class="hero-text">Start Your Day</p>
                 <p class="hero-text">At</p>
                 <p class="hero-text text-family">COFFEE HOUSE</p>
             </div>
-            <p class="hero-title-additional-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quas?</p>
-            <button class="btn">Explore More</button>
+            <p class="hero-title-additional-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quas?
+            </p>
+            <button class="btn">Show Now</button>
         </div>
 
         <div class="hero-image">
             <img class="img" src="images/hero-image.jpg" alt="">
+            <div class="adda">Adda with Coffee</div>
         </div>
 
         <div class="hero-featured">
             <div class="hero-featured-1">
-                <img class="hero-featured-img" src="images/hero-feature1.jpg" alt="">
+                <img class="hero-featured-img" src="images/hero-feature/hero-feature1.jpg" alt="">
                 <p class="hero-featured-text">Are the New Norm for iced coffee</p>
             </div>
             <div class="hero-featured-2">
-                <img class="hero-featured-img" src="images/hero-feature2.PNG" alt="">
+                <img class="hero-featured-img" src="images/hero-feature/hero-feature2.PNG" alt="">
                 <p class="hero-featured-text">Have a donut with the frappuccino</p>
             </div>
             <div class="hero-featured-3">
-                <img class="hero-featured-img" src="images/hero-feature3.PNG" alt="">
+                <img class="hero-featured-img" src="images/hero-feature/hero-feature3.PNG" alt="">
                 <p class="hero-featured-text">Enjoy our sugar free cookies</p>
             </div>
         </div>
 
     </div>
+    <!-- hero section end  -->
 
-    <!-- <div class="feature-product">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia pariatur est ea ducimus
-            s.</p>
-    </div> -->
+
+
+    <!-- feature product start -->
+    <div class="feature-product">
+        <p class="heading">Our Featured Products</p>
+        <section class="feature-product-section">
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia pariatur est ea ducimu
+            </p>
+
+            <div class="box">
+                <div class="feature-image-div">
+                    <div class="feature-image-card">
+                        <img class="feature-image" src="images/feature-products/coffee-soda.PNG" alt="">
+                        <p class="feature-image-text">COFFEE SODA</p>
+                    </div>
+                    <div class="feature-image-card">
+                        <img class="feature-image" src="images/feature-products/iced-mocha.PNG" alt="">
+                        <p class="feature-image-text">ICED MOCHA</p>
+                    </div>
+                    <div class="feature-image-card">
+                        <img class="feature-image" src="images/feature-products/irish-coffee.PNG" alt="">
+                        <p class="feature-image-text">IRISH COFFEE</p>
+                    </div>
+
+
+                </div>
+            </div>
+
+        </section>
+    </div>
+    <!-- feature product end -->
 
 
 
