masonry - we offer section added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     <div class="feature-product">
         <p class="heading">Our Featured Products</p>
         <section class="feature-product-section">
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia pariatur est ea ducimu
+            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia
+                pariatur est ea ducimu
             </p>
 
             <div class="box">
@@ -81,6 +82,37 @@
         </section>
     </div>
     <!-- feature product end -->
+
+
+
+
+    <!-- coffee masonry start -->
+    <div class="coffee-masonry">
+
+        <div class="coffee-masonry-gallary">
+            <div class="coffee-masonry-gallary-box">
+                <img src="images/coffee-masonry/cafe-au-lait.PNG" alt="">
+                <img src="images/coffee-masonry/expresso.jpg" alt="">
+                <img src="images/coffee-masonry/chocolate-cappucino.jpg" alt="">
+                <img src="images/coffee-masonry/mochaa.PNG" alt="">
+            </div>
+        </div>
+        <div class="coffee-masonry-description">
+            <div class="coffee-masonry-box">
+                <p class="masonry-offer-text">We Offer</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ve aliquam quasi voluptas? Lorem ipsum dolor sit amet consectetur utem, cum?</p>
+                <div class="unique-taste">
+                    <p class="unique-text">Unique Taste</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
+                </div>
+                <div class="premium-quality">
+                    <p class="premium-text">Premium Quality</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- coffee masonry end -->
 
 
 
