--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
         <div class="coffee-masonry-description">
             <div class="coffee-masonry-box">
                 <p class="masonry-offer-text">We Offer</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ve aliquam quasi voluptas? Lorem ipsum dolor sit amet consectetur utem, cum?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ve aliquam quasi voluptas? Lorem ipsum
+                    dolor sit amet consectetur utem, cum?</p>
                 <div class="unique-taste">
                     <p class="unique-text">Unique Taste</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
@@ -113,6 +114,46 @@
         </div>
     </div>
     <!-- coffee masonry end -->
+
+
+
+
+
+
+    <!-- coffee feedback start  -->
+    <div class="coffee-feedback">
+        <div class="feedback-description">
+            <div class="feedback-description-box">
+                <p class="feedback-title">Meet Our Clients</p>
+                <p class="feedback-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, harum.
+                    Soluta assumenda dolorem neque? Ratione praesentium asperiores ipsum facilis ullam.</p>
+                <button class="btn">Show All</button>
+            </div>
+        </div>
+        <div class="feedback-card-box">
+            <div class="single-card-box">
+                <div class="single-card-item opacity">
+                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, voluptatem. </p>
+                    <h3 class="feedback-name">Killian Salah</h3>
+                    <p class="feedback-occupation">Entrepreneur</p>
+                </div>
+                <div class="single-card-item opacity">
+                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fugit. </p>
+                    <h3 class="feedback-name">Killian Salah</h3>
+                    <p class="feedback-occupation">Entrepreneur</p>
+                </div>
+                <div class="single-card-item single-card-item-modified">
+                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, eius. </p>
+                    <h3 class="feedback-name">Killian Salah</h3>
+                    <p class="feedback-occupation">Entrepreneur</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- coffee feedback end  -->
 
 
 
