news and events added

--- a/index.html
+++ b/index.html
@@ -159,6 +159,50 @@
 
 
 
+    <!-- news and events start  -->
+    <div class="news-and-events">
+        <div class="heading">News and Events</div>
+        <p class="text-center news-and-events-description"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, veniam!</p>
+
+
+        <div class="news-and-events-card-section">
+            <div class="news-and-events-card-box">
+                <div class="news-and-events-card-item">
+                        <img src="images/discount/discount1.jpg" alt="">
+                        <div class="news-and-events-description">
+                            <p class="date">Feb 01, 2023</p>
+                            <p class="discount">Buy 2 Get 3</p>
+                            <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
+                            <p class="learn-more">Learn More</p>
+                        </div>
+                </div>
+                <div class="news-and-events-card-item">
+                    <img src="images/discount/discount2.jpg" alt="">
+                    <div class="news-and-events-description">
+                        <p class="date">Feb 01, 2023</p>
+                        <p class="discount">Discount 20%</p>
+                        <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
+                        <p class="learn-more">Learn More</p>
+                    </div>
+                </div>
+                <div class="news-and-events-card-item">
+                    <img src="images/discount/discount3.jpg" alt="">
+                    <div class="news-and-events-description">
+                        <p class="date">Feb 01, 2023</p>
+                        <p class="discount">30% Off in this week</p>
+                        <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
+                        <p class="learn-more">Learn More</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- news and events end  -->
+
+
+
+
+
 
 
     <!-- iconic icon  -->
