--- a/index.html
+++ b/index.html
@@ -10,164 +10,171 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="container">
+<body>
+
+    <section class="container">
 
 
-    <!-- hero section start -->
-    <div class="hero-section">
+        <!-- hero section start -->
+        <div class="hero-section">
 
-        <div class="hero-title">
-            <div>
-                <p class="hero-text">Start Your Day</p>
-                <p class="hero-text">At</p>
-                <p class="hero-text text-family">COFFEE HOUSE</p>
+            <div class="hero-title">
+                <div>
+                    <p class="hero-text">Start Your Day</p>
+                    <p class="hero-text">At</p>
+                    <p class="hero-text text-family">COFFEE HOUSE</p>
+                </div>
+                <p class="hero-title-additional-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                    quas?
+                </p>
+                <button class="btn">Show Now</button>
             </div>
-            <p class="hero-title-additional-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, quas?
-            </p>
-            <button class="btn">Show Now</button>
+
+            <div class="hero-image">
+                <img class="img" src="images/hero-image.jpg" alt="">
+                <div class="adda">Adda with Coffee</div>
+            </div>
+
+            <div class="hero-featured">
+                <div class="hero-featured-1">
+                    <img class="hero-featured-img" src="images/hero-feature/hero-feature1.jpg" alt="">
+                    <p class="hero-featured-text">Are the New Norm for iced coffee</p>
+                </div>
+                <div class="hero-featured-2">
+                    <img class="hero-featured-img" src="images/hero-feature/hero-feature2.PNG" alt="">
+                    <p class="hero-featured-text">Have a donut with the frappuccino</p>
+                </div>
+                <div class="hero-featured-3">
+                    <img class="hero-featured-img" src="images/hero-feature/hero-feature3.PNG" alt="">
+                    <p class="hero-featured-text">Enjoy our sugar free cookies</p>
+                </div>
+            </div>
+
         </div>
-
-        <div class="hero-image">
-            <img class="img" src="images/hero-image.jpg" alt="">
-            <div class="adda">Adda with Coffee</div>
-        </div>
-
-        <div class="hero-featured">
-            <div class="hero-featured-1">
-                <img class="hero-featured-img" src="images/hero-feature/hero-feature1.jpg" alt="">
-                <p class="hero-featured-text">Are the New Norm for iced coffee</p>
-            </div>
-            <div class="hero-featured-2">
-                <img class="hero-featured-img" src="images/hero-feature/hero-feature2.PNG" alt="">
-                <p class="hero-featured-text">Have a donut with the frappuccino</p>
-            </div>
-            <div class="hero-featured-3">
-                <img class="hero-featured-img" src="images/hero-feature/hero-feature3.PNG" alt="">
-                <p class="hero-featured-text">Enjoy our sugar free cookies</p>
-            </div>
-        </div>
-
-    </div>
-    <!-- hero section end  -->
+        <!-- hero section end  -->
 
 
 
-    <!-- feature product start -->
-    <div class="feature-product">
-        <p class="heading">Our Featured Products</p>
-        <section class="feature-product-section">
-            <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia
-                pariatur est ea ducimu
-            </p>
+        <!-- feature product start -->
+        <div class="feature-product">
+            <p class="heading">Our Featured Products</p>
+            <section class="feature-product-section">
+                <p class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iste officia
+                    pariatur est ea ducimu
+                </p>
 
-            <div class="box">
-                <div class="feature-image-div">
-                    <div class="feature-image-card">
-                        <img class="feature-image" src="images/feature-products/coffee-soda.PNG" alt="">
-                        <p class="feature-image-text">COFFEE SODA</p>
+                <div class="box">
+                    <div class="feature-image-div">
+                        <div class="feature-image-card">
+                            <img class="feature-image" src="images/feature-products/coffee-soda.PNG" alt="">
+                            <p class="feature-image-text">COFFEE SODA</p>
+                        </div>
+                        <div class="feature-image-card">
+                            <img class="feature-image" src="images/feature-products/iced-mocha.PNG" alt="">
+                            <p class="feature-image-text">ICED MOCHA</p>
+                        </div>
+                        <div class="feature-image-card">
+                            <img class="feature-image" src="images/feature-products/irish-coffee.PNG" alt="">
+                            <p class="feature-image-text">IRISH COFFEE</p>
+                        </div>
+
+
                     </div>
-                    <div class="feature-image-card">
-                        <img class="feature-image" src="images/feature-products/iced-mocha.PNG" alt="">
-                        <p class="feature-image-text">ICED MOCHA</p>
+                </div>
+
+            </section>
+        </div>
+        <!-- feature product end -->
+
+
+
+
+        <!-- coffee masonry start -->
+        <div class="coffee-masonry">
+
+            <div class="coffee-masonry-gallary">
+                <div class="coffee-masonry-gallary-box">
+                    <img src="images/coffee-masonry/cafe-au-lait.PNG" alt="">
+                    <img src="images/coffee-masonry/expresso.jpg" alt="">
+                    <img src="images/coffee-masonry/chocolate-cappucino.jpg" alt="">
+                    <img src="images/coffee-masonry/mochaa.PNG" alt="">
+                </div>
+            </div>
+            <div class="coffee-masonry-description">
+                <div class="coffee-masonry-box">
+                    <p class="masonry-offer-text">We Offer</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ve aliquam quasi voluptas? Lorem
+                        ipsum
+                        dolor sit amet consectetur utem, cum?</p>
+                    <div class="unique-taste">
+                        <p class="unique-text">Unique Taste</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
                     </div>
-                    <div class="feature-image-card">
-                        <img class="feature-image" src="images/feature-products/irish-coffee.PNG" alt="">
-                        <p class="feature-image-text">IRISH COFFEE</p>
+                    <div class="premium-quality">
+                        <p class="premium-text">Premium Quality</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
                     </div>
-
-
-                </div>
-            </div>
-
-        </section>
-    </div>
-    <!-- feature product end -->
-
-
-
-
-    <!-- coffee masonry start -->
-    <div class="coffee-masonry">
-
-        <div class="coffee-masonry-gallary">
-            <div class="coffee-masonry-gallary-box">
-                <img src="images/coffee-masonry/cafe-au-lait.PNG" alt="">
-                <img src="images/coffee-masonry/expresso.jpg" alt="">
-                <img src="images/coffee-masonry/chocolate-cappucino.jpg" alt="">
-                <img src="images/coffee-masonry/mochaa.PNG" alt="">
-            </div>
-        </div>
-        <div class="coffee-masonry-description">
-            <div class="coffee-masonry-box">
-                <p class="masonry-offer-text">We Offer</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit ve aliquam quasi voluptas? Lorem ipsum
-                    dolor sit amet consectetur utem, cum?</p>
-                <div class="unique-taste">
-                    <p class="unique-text">Unique Taste</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
-                </div>
-                <div class="premium-quality">
-                    <p class="premium-text">Premium Quality</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, obcaecati?</p>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- coffee masonry end -->
+        <!-- coffee masonry end -->
 
 
 
 
 
 
-    <!-- coffee feedback start  -->
-    <div class="coffee-feedback">
-        <div class="feedback-description">
-            <div class="feedback-description-box">
-                <p class="feedback-title">Meet Our Clients</p>
-                <p class="feedback-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, harum.
-                    Soluta assumenda dolorem neque? Ratione praesentium asperiores ipsum facilis ullam.</p>
-                <button class="btn">Show All</button>
-            </div>
-        </div>
-        <div class="feedback-card-box">
-            <div class="single-card-box">
-                <div class="single-card-item opacity">
-                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
-                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, voluptatem. </p>
-                    <h3 class="feedback-name">Killian Salah</h3>
-                    <p class="feedback-occupation">Entrepreneur</p>
-                </div>
-                <div class="single-card-item opacity">
-                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fugit. </p>
-                    <h3 class="feedback-name">Killian Salah</h3>
-                    <p class="feedback-occupation">Entrepreneur</p>
-                </div>
-                <div class="single-card-item single-card-item-modified">
-                    <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, eius. </p>
-                    <h3 class="feedback-name">Killian Salah</h3>
-                    <p class="feedback-occupation">Entrepreneur</p>
+        <!-- coffee feedback start  -->
+        <div class="coffee-feedback">
+            <div class="feedback-description">
+                <div class="feedback-description-box">
+                    <p class="feedback-title">Meet Our Clients</p>
+                    <p class="feedback-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum,
+                        harum.
+                        Soluta assumenda dolorem neque? Ratione praesentium asperiores ipsum facilis ullam.</p>
+                    <button class="btn">Show All</button>
                 </div>
             </div>
+            <div class="feedback-card-box">
+                <div class="single-card-box">
+                    <div class="single-card-item opacity">
+                        <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                        <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Necessitatibus, voluptatem. </p>
+                        <h3 class="feedback-name">Killian Salah</h3>
+                        <p class="feedback-occupation">Entrepreneur</p>
+                    </div>
+                    <div class="single-card-item opacity">
+                        <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, fugit. </p>
+                        <h3 class="feedback-name">Killian Salah</h3>
+                        <p class="feedback-occupation">Entrepreneur</p>
+                    </div>
+                    <div class="single-card-item single-card-item-modified">
+                        <img class="feedback-img" src="images/feedback/feedback1.PNG" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, eius. </p>
+                        <h3 class="feedback-name">Killian Salah</h3>
+                        <p class="feedback-occupation">Entrepreneur</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <!-- coffee feedback end  -->
+        <!-- coffee feedback end  -->
 
 
 
 
 
-    <!-- news and events start  -->
-    <div class="news-and-events">
-        <div class="heading">News and Events</div>
-        <p class="text-center news-and-events-description"> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam, ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, veniam!</p>
+        <!-- news and events start  -->
+        <div class="news-and-events">
+            <div class="heading">News and Events</div>
+            <p class="text-center news-and-events-description"> Lorem ipsum dolor sit amet consectetur, adipisicing
+                elit.
+                Nam, ullam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, veniam!</p>
 
 
-        <div class="news-and-events-card-section">
-            <div class="news-and-events-card-box">
-                <div class="news-and-events-card-item">
+            <div class="news-and-events-card-section">
+                <div class="news-and-events-card-box">
+                    <div class="news-and-events-card-item">
                         <img src="images/discount/discount1.jpg" alt="">
                         <div class="news-and-events-description">
                             <p class="date">Feb 01, 2023</p>
@@ -175,29 +182,70 @@
                             <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
                             <p class="learn-more">Learn More</p>
                         </div>
-                </div>
-                <div class="news-and-events-card-item">
-                    <img src="images/discount/discount2.jpg" alt="">
-                    <div class="news-and-events-description">
-                        <p class="date">Feb 01, 2023</p>
-                        <p class="discount">Discount 20%</p>
-                        <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
-                        <p class="learn-more">Learn More</p>
                     </div>
-                </div>
-                <div class="news-and-events-card-item">
-                    <img src="images/discount/discount3.jpg" alt="">
-                    <div class="news-and-events-description">
-                        <p class="date">Feb 01, 2023</p>
-                        <p class="discount">30% Off in this week</p>
-                        <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
-                        <p class="learn-more">Learn More</p>
+                    <div class="news-and-events-card-item">
+                        <img src="images/discount/discount2.jpg" alt="">
+                        <div class="news-and-events-description">
+                            <p class="date">Feb 01, 2023</p>
+                            <p class="discount">Discount 20%</p>
+                            <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
+                            <p class="learn-more">Learn More</p>
+                        </div>
+                    </div>
+                    <div class="news-and-events-card-item">
+                        <img src="images/discount/discount3.jpg" alt="">
+                        <div class="news-and-events-description">
+                            <p class="date">Feb 01, 2023</p>
+                            <p class="discount">30% Off in this week</p>
+                            <p>Lorem ipsum dolor sit amet conur adipisicing sit amet amre.</p>
+                            <p class="learn-more">Learn More</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <!-- news and events end  -->
+
+
+    </section>
+
+
+    <!-- footer start -->
+    <div class="footer-section">
+        <div class="footer-box">
+            <div class="quick-links">
+                <p>Quick Link</p>
+                <ul>
+                    <li>Home</li>
+                    <li>About us</li>
+                </ul>
+            </div>
+            <div class="our-service">
+                <p>Our Service</p>
+                <ul>
+                    <li>Cold Coffee</li>
+                    <li>Hot Coffee</li>
+                </ul>
+            </div>
+            <div class="help">
+                <p>Help</p>
+                <ul>
+                    <li>FAQs</li>
+                    <li>Contact us</li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <p>Subscribe to our newsletter</p>
+                <div class="email-box">
+                    <input class="email" type="text" placeholder="enter your email" required >
+                    <ion-icon class="email-icon" name="arrow-forward-sharp"></ion-icon>
+                </div>
+            </div>
+        </div>
+
+        <p class="text-center reserved">© All rights reserved by faisal ahmed</p>
     </div>
-    <!-- news and events end  -->
+    <!-- footer end -->
 
 
 
